Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18083

lnetctl peer list segfault when peers have more than one NI

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.16.0
    • Lustre 2.16.0
    • None
    • 3
    • 9223372036854775807

      cassini-hostb:/home/hornc/lustre-wc-rel/lustre/tests # lnetctl peer add --prim 172.18.2.5@tcp
      cassini-hostb:/home/hornc/lustre-wc-rel/lustre/tests # lnetctl peer list
      peer list:
      -     nid: 172.18.2.5@tcp
      cassini-hostb:/home/hornc/lustre-wc-rel/lustre/tests # lnetctl peer add --prim 172.18.2.5@tcp --nid 10.214.132.213@tcp
      cassini-hostb:/home/hornc/lustre-wc-rel/lustre/tests # lnetctl peer list
      Emitter error: expected SCALAR, SEQUENCE-START, MAPPING-START, or ALIAS
      Segmentation fault (core dumped)
      cassini-hostb:/home/hornc/lustre-wc-rel/lustre/tests #
      

            simmonsja James A Simmons
            hornc Chris Horn
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: